[package]
name = "babyjubjub-rs"
version = "0.0.11"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "Apache-2.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[dependencies]
ark-bn254 = "0.4"
ark-ff = "0.4"
rand = "0.8"
num = "0.4"
num-bigint = {version = "0.4", features = ["rand"]}
num-traits = "0.2.8"
blake-hash = {version="0.4.0", optional=true}
blake = {version="2.0.1", optional=true}
poseidon-rust = {git = "https://github.com/TaceoLabs/poseidon-rust.git"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = "0.14"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"


[[bench]]
name = "bench_babyjubjub"
harness = false

[features]
default = ["blake-hash"]
aarch64 = ["blake"]
